# eqr_rl_deploy

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  main.cpp  sudo_gdb
interface/: CMakeLists.txt
interface/robot/hardware/: eqr_hardware_interface.hpp  go2_hardware_interface.hpp  hardware_interface_ehr02.yaml  lite3_hardware_interface.hpp
interface/robot/simulation/: mujoco_simulation.py  pybullet_simulation.py
interface/user_command/: logi_interface.hpp
policy/: go2_amp_4000.pt  go2_amp_nopace.pt  go2_amp_onlycanter.pt  go2_amp_rough.pt  go2_fan_imp.pt  go2_fan_ori.pt  go2_fan_policy.pt  go2_fs.pt  go2_hs.pt  go2_pierew_5000.pt  go2_rough.pt  handstand_15000.pt  lite3_handstand.pt  lite3_model_8000.pt  model_1000.pt  model_11000.pt  model_1500.pt  model_15000.pt  model_25500.pt  model_28500.pt  model_30000.pt  model_3500.pt  model_best.pt  nodamp_1000.pt  nopace_15000.pt  nopace_5000.pt  onlycanter_15000.pt  onlycanter_5000.pt  p22d1.5.pt  rough.pt  rough_33500.pt  rough_60000.pt  test.pt
run_policy/: eqr1_policy_runner.hpp  eqr1_policy_runner_vae.hpp  go2_policy_runner.hpp  go2_policy_runner_ts.hpp  lite3_test_policy_runner.hpp
state_machine/: idle_state.hpp  rl_control_state.hpp  standup_state.hpp  state_machine.hpp
state_machine/parameters/: control_parameters.h  eqr_control_parameters.cpp  go2_control_parameters.cpp  lite3_control_parameters.cpp
types/: custom_types.h
